# benchmark-api-frameworks-postgres

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 10a45c5163bb_first_version.py  72dd2ef7a369_first_version.py
fastapi_sqlalchemy/: crud.py  database.py  main.py
