[tool.poetry]
name = "benchmark-api-frameworks-postgres"
version = "0.1.0"
description = ""
authors = ["congdh <congdh2812@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
